fixed spacing

--- a/css/color_keywords.css
+++ b/css/color_keywords.css
@@ -23,7 +23,7 @@ section {
 
 p {
 	text-align: center;
-	padding-top: 52px;
+	padding-top: 50px;
 }
 
 a:link {
